# clip_tokenizer_cpp

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: test.yaml
cmake/: clip_tokenizer_cppConfig.cmake.in
include/: image_preprocessor.h  tokenizer.h
python_test/: pyproject.toml
python_test/src/python_test/: __init__.py  main.py  main_hf.py  output_verification.py  simple_tokenizer.py  speed_benchmark.py
src/: bindings.cpp  image_preprocessor.cpp  main.cpp  tokenizer.cpp
tests/: CMakeLists.txt  test_tokenizer.cpp
