[project]
name = "python-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ftfy>=6.3.1",
    "matplotlib>=3.10.8",
    "regex>=2026.1.15",
    "requests>=2.32.5",
    "transformers>=5.0.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
